src/Oro/Bundle/CommerceMenuBundle/Resources/public/default/scss/components/main-menu-column/main-menu-column.scss
// @theme: default;

.main-menu-column {
    position: relative;

    min-width: 200px;

    font-size: $base-font-size;

    &::before {
        position: absolute;
        top: 40px;
        bottom: 0;
        left: 0;

        display: block;

        width: 1px;

        content: '';

        border-left: 1px solid get-color('additional', 'light');
    }

    &:first-child::before {
        display: none;
    }

    &:not(:first-child) {
        padding-left: 34px;
    }

    &--splited {
        min-width: 400px;

        white-space: nowrap;
    }

    &--splited &__inner-left,
    &--splited &__inner-right {
        display: inline-block;

        width: 50%;
        vertical-align: top;
    }

    &__title {
        margin-bottom: 24px;

        text-transform: uppercase;

        color: get-color('primary', 'dark');
    }

    &__item,
    &__subitem {
        margin-bottom: 8px;
    }

    &__item &__link {
        color: get-color('additional', 'dark');
    }

    &__subitem {
        padding-left: 20px;
    }

    &__subitem &__link {
        color: #a7a7a7;
    }

    &__image {
        display: block;
    }

    &__link {
        display: block;
        overflow: hidden;

        max-width: 300px;

        white-space: nowrap;
        text-overflow: ellipsis;
    }
}

@include breakpoint('desktop') {
    .main-menu-column {
        &__inner {
            display: block !important;
        }

        &__icon {
            display: none;
        }
    }
}

@include breakpoint('tablet') {
    .main-menu-column {
        margin: 0 -15px 15px -15px;
        padding: 18px 34px 0 34px;

        border-top: 1px solid get-color('additional', 'light');

        &::before {
            border-left: 0;
        }

        &--splited &__inner-left,
        &--splited &__inner-right {
            display: block;

            width: auto;
            margin-bottom: 15px;
        }

        &__inner {
            margin-bottom: 5px;
        }

        &__title {
            margin-bottom: 14px;
        }

        &__icon {
            margin: -2px 0 0 5px;
        }
    }
}

